overflow-x added to fix

--- a/src/scss/layout/_product-info.scss
+++ b/src/scss/layout/_product-info.scss
@@ -3,7 +3,7 @@
 @use 'base/mixins' as m;
 
 .product-info__container {
-    width: min-content;
+    overflow: hidden;
     @include m.desktop {
         height: 60rem;
         display: flex;
